# network-play

./: .gitignore  README.md  stack.yaml
network-client/: network-client.cabal
network-client/src/: Main.hs
network-server/: network-server.cabal
network-server/src/: Main.hs
tqueue-play/: tqueue-play.cabal
tqueue-play/src/: Main.hs
trivial-bs-client/: README.md
trivial-bs-client/src/: Main.hs
trivial-bs-server/: trivial-bs-server.cabal
trivial-bs-server/src/: Main.hs
trivial-bs/trivial-bs-client/: trivial-bs-client.cabal
trivial-bs/trivial-bs-client/src/: Main.hs
trivial-client/: README.md  trivial-client.cabal
trivial-client/src/: Main.hs
trivial-proto-client/: trivial-proto-client.cabal
trivial-proto-client/src/: Main.hs
trivial-proto-server/: trivial-proto-server.cabal
trivial-proto-server/src/: .#Main.hs  Main.hs
trivial-proto/trivial-proto-client/: stack.yaml
trivial-proto/trivial-proto-server/: trivial-proto-server.cabal
trivial-proto/trivial-protocol/: trivial-protocol.cabal
trivial-proto/trivial-protocol/src/: Protocol.hs
trivial-protocol/: trivial-protocol.cabal
trivial-protocol/src/: Protocol.hs
trivial-server/: trivial-server.cabal
trivial-server/src/: Main.hs  Main.hs_forkio
trivial-simtcp-client/: stack.yaml
trivial-simtcp-server/: trivial-simtcp-server.cabal
trivial-simtcp/trivial-simtcp-client/: trivial-simtcp-client.cabal
trivial-simtcp/trivial-simtcp-client/src/: Main.hs
trivial-simtcp/trivial-simtcp-protocol/: trivial-simtcp-protocol.cabal
trivial-simtcp/trivial-simtcp-protocol/src/: Protocol.hs
trivial-simtcp/trivial-simtcp-server/: trivial-simtcp-server.cabal
trivial-simtcp/trivial-simtcp-server/src/: Main.hs
trivial-splitmsg-server/src/: Main.hs
trivial-splitmsg/trivial-splitmsg-client/: trivial-splitmsg-client.cabal
trivial-splitmsg/trivial-splitmsg-client/src/: Main.hs
trivial-splitmsg/trivial-splitmsg-server/: trivial-splitmsg-server.cabal
trivial-tcptls/: CHANGELOG.md  stack.yaml
trivial-tcptls-client/: stack.yaml  trivial-tcptls-client.cabal
trivial-tcptls-client/src/: Main.hs
trivial-tcptls-protocol/: README.md  trivial-tcptls-protocol.cabal
trivial-tcptls-protocol/src/: X509.hs
trivial-tcptls-server/: trivial-tcptls-server.cabal
trivial-tcptls-server/src/: Main.hs
trivial-tcptls/trivial-tcptls-client/: README.md  trivial-tcptls-client.cabal
trivial-tcptls/trivial-tcptls-client/src/: Main.hs
trivial-tcptls/trivial-tcptls-protocol/: README.md
trivial-tcptls/trivial-tcptls-protocol/src/: Protocol.hs  X509.hs
trivial-tcptls/trivial-tcptls-server/: README.md  trivial-tcptls-server.cabal
trivial-tcptls/trivial-tcptls-server/src/: Main.hs
trivial/trivial-client/src/: Main.hs
