name:                trivial-protocol
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/danplubell/trivial-protocol#readme
license:             BSD3
license-file:        LICENSE
author:              Dan Plubell
maintainer:          danplubell@gmail.com
copyright:           2015 Dan Plubell
category:            Other
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Protocol
  build-depends:       base >= 4.7 && < 5
                     , binary
                     , bytestring
                     , network
                     , text
  default-language:    Haskell2010


