name:                trivial-tcptls-protocol
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/danplubell/trivial-tcptls-protocol#readme
license:             BSD3
license-file:        LICENSE
author:              Dan Plubell
maintainer:          danplubell@gmail.com
copyright:           2015 Dan Plubell
category:            Other
build-type:          Simple
cabal-version:       >=1.10

library 
  hs-source-dirs:      src
  exposed-modules:     Protocol
                       X509
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , network-simple
                     , binary
                     , network
                     , tls
                     , stm
                     , x509
                     , x509-store
                     , pem
                     , process
