name:                trivial-tcptls-server
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/danplubell/trivial-tcptls-server#readme
license:             BSD3
license-file:        LICENSE
author:              Dan Plubell
maintainer:          danplubell@gmail.com
copyright:           2015 Dan Plubell
category:            Other
build-type:          Simple
cabal-version:       >=1.10

executable trivial-tcptls-server
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , data-default-class
                     , network
                     , tls
                     , x509-system
                     , x509-store
                     , stm
                     , binary
                     , bytestring
                     , trivial-tcptls-protocol
                     , x509-validation
